[package]
name = "television"
version = "0.9.0"
edition = "2021"
description = "The revolution will be televised."
license = "MIT"
authors = ["Alexandre Pasmantier <alex.pasmant@gmail.com>"]
repository = "https://github.com/alexpasmantier/television"
homepage = "https://github.com/alexpasmantier/television"
keywords = ["search", "fuzzy", "preview", "tui", "terminal"]
categories = [
  "command-line-utilities",
  "command-line-interface",
  "concurrency",
  "development-tools",
]
include = [
  "LICENSE",
  "README.md",
  "src/**/*.rs",
  "config/themes/**/*.toml",
  "config/config.toml",
  "config/channels.toml",
]

[[bin]]
bench = false
path = "src/main.rs"
name = "tv"


[features]
simd = ["dep:simdutf8"]
zero-copy = []
default = ["zero-copy", "simd"]


[dependencies]
directories = "5.0.1"
color-eyre = "0.6.3"
lazy_static = "1.5.0"
tokio = { version = "1.41.1", features = ["full"] }
tracing = "0.1.40"
tracing-subscriber = { version = "0.3.18", features = ["env-filter", "serde"] }
rustc-hash = "2.1.0"
syntect = "5.2.0"
unicode-width = "0.2.0"
clap = { version = "4.5.20", features = ["derive", "cargo", "string"] }
serde = { version = "1.0.214", features = ["derive"] }
toml = "0.8.19"
ratatui = { version = "0.29.0", features = ["serde", "macros"] }

tui-logger = { path = "../tui-logger"}

# enums
enum_dispatch = "0.3.13"
strum = "0.26.3"

# external dependencies
config = "0.14.0"
crossterm = { version = "0.28.1", features = ["serde"] }
signal-hook = "0.3.17"
copypasta = "0.10.1"

# previewer dependencies
parking_lot = "0.12.3"
devicons = "0.6.11"
regex = "1.11.1"
nom = "7.1"
thiserror = "1.0"
smallvec = { version = "1.10.0", features = ["const_generics"] }

# utils
ignore = "0.4.23"
bat = { version = "0.24.0", default-features = false, features = [
  "regex-onig",
] }
gag = "1.0.0"

# matcher
nucleo = "0.5.0"

# simd
simdutf8 = { version = "0.1", optional = true }

[dev-dependencies]
criterion = "0.5.1"
devicons = "0.6.11"

[build-dependencies]
vergen-gix = { version = "1.0.0", features = ["build", "cargo", "rustc"] }

[target.'cfg(target_os = "macos")'.dependencies]
crossterm = { version = "0.28.1", features = ["serde", "use-dev-tty"] }


[profile.staging]
inherits = "dev"
opt-level = 3
debug = true
lto = false

[profile.profiling]
inherits = "release"
debug = true


[profile.release]
codegen-units = 1
lto = "fat"

[profile.deb]
inherits = "release"
debug = false

[lints]
workspace = true

[workspace.lints.clippy]
pedantic = { level = "warn", priority = -1 }

must_use_candidate = "allow"
too_many_lines = "allow"
missing_panics_doc = "allow"
missing_errors_doc = "allow"
module_name_repetitions = "allow"
cast_precision_loss = "allow"
map_unwrap_or = "allow"
return_self_not_must_use = "allow"
uninlined_format_args = "allow"
similar_names = "allow"
float_cmp = "allow"
implicit_hasher = "allow"
wildcard_imports = "allow"
from_iter_instead_of_collect = "allow"
struct_excessive_bools = "allow"
fn_params_excessive_bools = "allow"
match_bool = "allow"
